[project]
name = "windsurf-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncdb>=2.11.3",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "pip>=25.0.1",
    "pymssql>=2.3.2",
    "sqlalchemy>=2.0.39",
]
